syntax = "proto3";
package hipcheck.v1;

import "messages/empty.proto";

/**
 * Getting the default policy expression has no params, so we just wrap
 * the empty message for maximal forward compatibility.
 */
message DefaultPolicyExprRequest {
    Empty empty = 1;
}
