syntax = "proto3";
package hipcheck.v1;

import "messages/query.proto";

message QueryRequest {
    Query query = 1;
}
