syntax = "proto3";
package hipcheck.v1;

import "messages/query.proto";

message QueryResponse {
    Query query = 1;
}
