syntax = "proto3";
package hipcheck.v1;

import "messages/empty.proto";

message SetConfigResponse {
    // No actual data returned. Errors handled with normal gRPC error system.
    Empty empty = 1;
}
